# stamp-cli

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
src/: main.rs  stamp-schema.json
src/schemas/: stamp-schema.json
tests/templates/axum_server/: Cargo.toml.tera  create.sh  stamp.toml  stamp.yaml
tests/templates/axum_server/src/: lib.rs
tests/templates/axum_server/src/init/: config.rs  logging.rs
tests/templates/axum_server/{{ crate_name }}/: {{ crate_name }}.yaml.tera
tests/templates/devcontainers/flutter_rust/: stamp.toml  stamp.yaml
tests/templates/devcontainers/flutter_rust/.devcontainer/: devcontainer.tera.json
tests/templates/devcontainers/rust/: stamp.toml  stamp.yaml
tests/templates/devcontainers/rust/.devcontainer/: devcontainer.json.tera
