[package]
name = "stamp-cli"
version = "0.2.3"
edition = "2021"
description = "A cli tool for templates"
license = "Apache-2.0"

[[bin]]
name = "stamp"
path = "src/main.rs"

[dependencies]
clap = { version = "^4", features = ["derive"] }
tera = "^1.17"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_yaml = "^0.9"
directories = "^6.0"
anyhow = "^1"
walkdir = "^2.5"