[package]
name = "stamp-cli"
version = "0.2.4"
edition = "2021"
description = "A cli tool for templates"
license = "Apache-2.0"

[[bin]]
name = "stamp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
tera = "1.20.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.33"
directories = "6.0.0"
eros = "0.5.0"
walkdir = "2.5.0"
indexmap = { version = "2.12.1", features = ["serde"] }
